@@ -1,2 +1,5 @@
+2011-03-15 gabriel
+* Added functional test to UNG Calendar
+
 2011-03-13 gabriel
 * initial commit.
